--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native": "0.72.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.50.0"
   },
   "private": true
 }
