--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "expo": "~49.0.12",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-location": "~16.1.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
